# psudilku_back

./: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
auths/: urls.py  views.py
phase10/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
phase10/migrations/: 0001_initial.py  0002_initial.py  0002_phaseplayers_finish_at.py  0003_phaseplayers_order_queue.py  0004_phase_round.py  0005_phase_level_config_phasecustomlevels.py  0006_alter_phaseplayers_level.py  0007_phase_duration.py  0008_phase_change_queue_time.py  0009_alter_phase_change_queue_time.py  0010_phaseplayers_get_card_phaseplayers_put_card.py  0011_alter_phasecustomlevels_options_and_more.py  0012_rename_active_phaseplayers_connected_and_more.py  0013_alter_phasecustomlevels_options_and_more.py
psudilku/: asgi.py  celery.py  settings.py  urls.py  urls_api.py  wsgi.py
psudilku/middleware/: auth_ws_middleware.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_usergames.py  0003_auto_20250720_1942.py  0004_alter_usergames_apple_id.py  0005_auto_20250820_1942.py
utils/: base_controller.py  base_model.py
whoiam/: apps.py  models.py  serializers.py  urls.py  views.py
whoiam/migrations/: 0001_initial.py  0002_whoiam_pending_whoiamplayers_create_word_and_more.py  0003_whoiamplayers_finished_at.py
ws/: consumer.py  urls.py  views.py
